--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -12,13 +12,32 @@
       <div class="container hero">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1>Meet Callie, a countdown bot for Slack.</h1>
-            <hr class="separator"></hr>
+            <div class="text-left">
+              <h1>Meet Callie,
+              <br>a countdown bot for Slack.</h1>
+              <h3>
+                Keep track of events, deadlines, and more for your team with a few simple commands, together with Callie.
+              </h3>
+            </div>
+            <img src="../img/slack-placer.png" alt="A screenshot of Callie in action"/>
             <a id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
           </div>
         </div>
       </div>
     </div>
   </body>
+
+  <div class="container">
+    <div class="row text-center examples">
+    <div class="col-md-3">
+      <h3>Hey!</h3>
+    </div>
+    <div class="col-md-3">
+      <h3>Hello!</h3>
+    </div>
+    <div class="col-md-3">
+      <h3>Hi!</h3>
+    </div>
+  </div>
 </html>
 
