--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <div class="jumbotron">
-      <div class="container hero">
+      <div class="container hero push-down white">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
               <h1>Meet Callie,
               <br>a countdown bot for Slack.</h1>
-              <h3>
-                Keep track of events, deadlines, and more for your team with a few simple commands, together with Callie.
+              <h3 class="push-down">
+                Callie the Calendar Dog keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
             </div>
             <img src="../img/slack-placer.png" alt="A screenshot of Callie in action"/>
-            <a id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+            <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
           </div>
         </div>
       </div>
@@ -28,15 +28,64 @@
   </body>
 
   <div class="container">
-    <div class="row text-center examples">
-    <div class="col-md-3">
-      <h3>Hey!</h3>
+    <div class="row text-center examples push-down">
+      <div class="col-md-3 breakdown-panel">
+        <span class="glyphicon full-glyph glyphicon-ok-sign" aria-hidden="true"></span>
+        <h3>Keep It Simple</h3>
+        <p>
+          Just a few commands gives Callie all she needs to keep you and your team informed of upcoming events, trips, or deadlines.
+        </p>
+      </div>
+      <div class="col-md-3 breakdown-panel">
+        <span class="glyphicon full-glyph glyphicon-calendar" aria-hidden="true"></span>
+        <h3>Automated Reminders</h3>
+        <p>
+          Let Callie give you weekly or daily updates on the countdown, and update your settings whenever you like.
+        </p>
+      </div>
+      <div class="col-md-3 breakdown-panel">
+        <span class="glyphicon full-glyph glyphicon-heart" aria-hidden="true"></span>
+        <h3>It's a Cute Dog</h3>
+        <p>
+          That's what we're all here for, really. A cute dog that knows when your stuff is coming up. Right?
+        </p>
+      </div>
     </div>
-    <div class="col-md-3">
-      <h3>Hello!</h3>
-    </div>
-    <div class="col-md-3">
-      <h3>Hi!</h3>
+  </div>
+  <div class="container night white">
+    <div class="row">
+      <div class="col-md-2 col-md-offset-4">
+      <h1 class="small-text-box">Other Fun Things You Might Do</h1>
+      </div>
+      <div class="col-md-3">
+        <ul>
+          <li>
+            <a href="mailto:countdown.to.counttown@gmail.com" target="_blank">
+              <h3>
+                1. Send an Email
+              </h3>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/brianpgerson/the-count" target="_blank">
+              <h3>
+                2. Fork a Repo
+              </h3>
+            </a>
+          </li>
+          <li>
+            <a href="http://www.payme.com" target="_blank">
+              <h3>
+                3. Donate a Dollar
+              </h3>
+            </a>
+          </li>
+          <li>
+            <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks">
+            <h3 class="extra-fun">4. Install Callie</h3>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </html>
