New little icon:

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,6 +6,7 @@
 
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="../css/main.css">
+      <link rel="shortcut icon" href="/favicon.ico">
   </head>
   <body>
     <div class="jumbotron">
@@ -13,7 +14,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
-              <h1>Meet Callie,
+              <h1>Meet Callie,<img src="../img/corgigirl.png" id="little_callie" alt="Callie, the calendar dog"/>
               <br>a countdown bot for Slack.</h1>
               <h3 class="push-down">
                 Callie the Calendar Dog keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
