A nice style change

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -14,8 +14,8 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
-              <h1>Meet Callie,<img src="../img/corgigirl.png" id="little_callie" alt="Callie, the calendar dog"/>
-              <br>a countdown bot for Slack.</h1>
+              <h1>Meet Callie,
+              <br>a countdown bot for Slack. <img src="../img/corgigirl.png" id="little_callie" alt="Callie, the calendar dog"/></h1>
               <h3 class="push-down">
                 Callie the Calendar Dog keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
@@ -61,29 +61,30 @@
       <div class="col-md-3">
         <ul>
           <li>
+            <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks">
+            <h3 class="extra-fun">1. Install Callie</h3>
+          </li>
+          <li>
             <a href="mailto:countdown.to.counttown@gmail.com" target="_blank">
               <h3>
-                1. Send an Email
+                2. Send an Email
               </h3>
             </a>
           </li>
           <li>
             <a href="https://github.com/brianpgerson/the-count" target="_blank">
               <h3>
-                2. Fork a Repo
+                3. Fork a Repo
               </h3>
             </a>
           </li>
           <li>
-            <a href="http://www.payme.com" target="_blank">
+            <a href="https://www.paypal.me/bpgerson/1" target="_blank">
               <h3>
-                3. Donate a Dollar
+                4. Donate a Dollar
               </h3>
+              <p>It'll keep the lights on for Callie. Thanks!</p>
             </a>
-          </li>
-          <li>
-            <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks">
-            <h3 class="extra-fun">4. Install Callie</h3>
           </li>
         </ul>
       </div>
