Update error and thanks pages

--- a/public/pages/error.html
+++ b/public/pages/error.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sample Site</title>
+  <head>
+      <meta charset="UTF-8">
+      <title>Callie - A Countdown Slack Bot</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <style>
-        body { padding-top:50px; }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <div class="jumbotron">
-            <h1>Oh no! Something went wrong.</h1>
-            <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="../css/main.css">
+      <link rel="shortcut icon" href="/favicon.ico">
+  </head>
+  <body>
+    <div class="jumbotron">
+      <div class="container hero push-down white">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-left">
+              <h1>Uh oh!
+              <br>Something appears to have gone wrong.</h1>
+              <h3 class="push-down">
+                Try again. If you see this page and can't figure out why, email <a href="mailto:countdown.to.counttown@gmail.com" target="_blank">countdown.to.counttown@gmail.com</a>
+              </h3>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
