--- a/public/pages/thanks.html
+++ b/public/pages/thanks.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sample Site</title>
+  <head>
+      <meta charset="UTF-8">
+      <title>Callie - A Countdown Slack Bot</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <style>
-        body { padding-top:50px; }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <div class="jumbotron">
-            <h1>Thanks!</h1>
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="../css/main.css">
+      <link rel="shortcut icon" href="/favicon.ico">
+  </head>
+  <body>
+    <div class="jumbotron">
+      <div class="container hero push-down white">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-left">
+              <h1>Thanks!
+              <br>Pretty easy, right?</h1>
+              <h3 class="push-down">
+                Callie is ready and waiting on the channels you invite her to. Now go on and set up some countdowns. Bark!
+              </h3>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
