--- a/public/pages/error.html
+++ b/public/pages/error.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <div class="container hero push-down white">
+      <div class="container hero wholepage white">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
@@ -21,6 +21,9 @@
               </h3>
             </div>
           </div>
+        </div>
+        <div class="row text-center">
+          <img src="../img/corgigirl.png" id="big_callie" alt="Callie, the calendar dog"/>
         </div>
       </div>
     </div>
