--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -77,9 +77,16 @@
               </a>
             </li>
             <li>
+              <a href="https://callie-corgi.herokuapp.com/privacy" target="_blank">
+                <h3>
+                  4. Learn 'bout privacy.
+                </h3>
+              </a>
+            </li>
+            <li>
               <a href="https://www.paypal.me/bpgerson/1" target="_blank">
                 <h3>
-                  4. Donate a Dollar
+                  5. Donate a Dollar
                 </h3>
                 <p>It'll keep the lights on for Callie. Thanks!</p>
               </a>
