try another route 2

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li>
-              <a href="callie-corgi.herokuapp.com/privacy">
+              <a href="/privacy">
                 <h3>
                   4. Learn 'bout privacy.
                 </h3>
