Some final touches

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li>
-              <a href="/privacy">
+              <a href="/privacy.html">
                 <h3>
                   4. Learn 'bout privacy.
                 </h3>
