--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="../css/main.css">
-      <link rel="shortcut icon" href="/favicon.ico">
+      <link rel="shortcut icon" href="../img/favicon.ico">
   </head>
   <body>
     <div class="jumbotron">
