Handle some more error stuff

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
       <title>Callie - A Countdown Slack Bot</title>
 
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-      <link rel="stylesheet" type="text/css" href="../css/main.css">
-      <link rel="shortcut icon" href="../img/favicon.ico">
+      <link rel="stylesheet" type="text/css" href="./css/main.css">
+      <link rel="shortcut icon" href="./img/favicon.ico">
   </head>
   <body>
     <div class="jumbotron">
