Reboot bots on startup

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
               <h1>Meet Callie,
               <br>a countdown bot for Slack. <img src="../img/corgigirl.png" id="little_callie" alt="Callie, the calendar dog"/></h1>
               <h3 class="push-down">
-                Callie the Calendar Dog keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
+                Callie the Calendar Corgi keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
             </div>
             <img src="../img/slack-placer.png" alt="A screenshot of Callie in action"/>
