--- a/public/thanks.html
+++ b/public/thanks.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
-              <h1>Thanks!
+              <h1>You're all set!
               <br>Pretty easy, right?</h1>
               <h3 class="push-down">
                 Callie is ready and waiting on the channels you invite her to. Now go on and set up some countdowns. Bark!
