Redirect URI fix

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         <div class="col-md-3">
           <ul>
             <li>
-              <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647&redirect_uri=http://localhost:1337/thanks">
+              <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647">
               <h3 class="extra-fun">1. Install Callie</h3>
             </li>
             <li>
