--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 Callie the Calendar Corgi keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
             </div>
-            <img src="../img/slack-placer.png" alt="A screenshot of Callie in action"/>
+            <img src="../img/callie-screen.png" alt="A screenshot of Callie in action"/>
             <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
           </div>
         </div>
