--- a/public/oops.html
+++ b/public/oops.html
@@ -14,10 +14,10 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
-              <h1>Uh oh!
-              <br>Something appears to have gone wrong.</h1>
+              <h1>Oops!
+              <br>Looks like someone from your team already installed Callie.</h1>
               <h3 class="push-down">
-                Try again. If you see this page and can't figure out why, email <a href="mailto:countdown.to.counttown@gmail.com">countdown.to.counttown@gmail.com</a>
+                Try inviting @callie to the room you're trying to install her in. If that doesn't work (or if you're sure Callie isn't already installed), email <a href="mailto:countdown.to.counttown@gmail.com">countdown.to.counttown@gmail.com</a>
               </h3>
             </div>
           </div>
