what the hey did I break

--- a/public/oops.html
+++ b/public/oops.html
@@ -17,7 +17,7 @@
               <h1>Oops!
               <br>Looks like someone from your team already installed Callie.</h1>
               <h3 class="push-down">
-                Try inviting @callie to the room you're trying to install her in. If that doesn't work (or if you're sure Callie isn't already installed), email <a href="mailto:countdown.to.counttown@gmail.com">countdown.to.counttown@gmail.com</a>
+                Try inviting @callie to the room you're trying to install her in. If that doesn't work (or if you're sure Callie isn't already installed), email <a href="mailto:countdown.to.counttown@gmail.com">countdown.to.counttown@gmail.com</a> and provide all the relevant details, please!
               </h3>
             </div>
           </div>
