--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
               </h3>
             </div>
             <img id="screenshot" src="../img/callie-screenshot.png" alt="A screenshot of Callie in action"/>
-            <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming_webhood,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+            <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming_webhook,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
           </div>
         </div>
       </div>
