--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
               <h3 class="push-down">
                 Callie the Calendar Corgi keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
+              <p>
+                UPDATES: Callie was updated on April 2nd, 2017, fixing some critical issues. Automated reminders should now work like a charm, and if you accidentally entered your inputs surrounded by brackets (like in the example), your data has been updated.
+
+                If you already had a scheduled reminder set up, you probably got some gobbledegook in your channel when the update merged and exposed an edge case. Apologies.
+
+                This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered and issue or bug. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
+              </p>
             </div>
             <img id="screenshot" src="../img/callie-screenshot.png" alt="A screenshot of Callie in action"/>
             <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
