--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
               </h3>
               <div>
                   <p>
-                  UPDATES: Callie was updated on April 2nd, 2017, fixing some critical issues. Automated reminders should now work like a charm, and if you accidentally entered your inputs surrounded by brackets (like in the example), your data has been updated.
+                  <strong>UPDATES</strong>: Callie was updated on April 2nd, 2017, fixing some critical issues. Automated reminders should now work like a charm, and if you accidentally entered your inputs surrounded by brackets (like in the example), your data has been updated.
                   </p>
                   <p>
                   If you already had a scheduled reminder set up, you probably got some gobbledegook in your channel when the update merged and exposed an edge case. Apologies.
                   </p>
                   <p>
-                  This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered and issue or bug. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
+                  This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
                   </p>
               </div>
             </div>
