Update index page

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,13 @@
               </h3>
               <div>
                   <p>
-                  <strong>UPDATES</strong>: Callie was updated on April 2nd, 2017, fixing some critical issues. Automated reminders should now work like a charm, and if you accidentally entered your inputs surrounded by brackets (like in the example), your data has been updated.
+                    <strong>UPDATES</strong>: Callie was last updated on April 10th, 2017.
                   </p>
-                  <p>
-                  If you already had a scheduled reminder set up, you probably got some gobbledegook in your channel when the update merged and exposed an edge case. Apologies.
-                  </p>
+                  <ul>
+                  <li>Some countdowns saved with bad data were unreachable via slack commands. Those are fixed and working now.</li>
+                  <li>Scheduled reminders will also now delete events if they happened already or happen on the day of the reminder.</li>
+                  <li>Error messages are more verbose. Especially if you try saving a countdown with brackets.</li>
+                  </ul>
                   <p>
                   This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
                   </p>
