Add instructions to thankyou page

--- a/public/thanks.html
+++ b/public/thanks.html
@@ -19,6 +19,18 @@
               <h3 class="push-down">
                 Callie is ready and waiting on the channels you invite her to. Now go on and set up some countdowns. Bark!
               </h3>
+              <h3>Getting Started:</h3>
+              <p>
+              Hi there! I'm Callie the Calendar Corgi, a slack bot for keeping track of fun events, deadlines, and goals for you and your team. I'm also a very good dog!
+              </p>
+              <p>
+              Get started and create your first countdown by saying "@callie start date: <YYYY-MM-DD>, event: <event name>\", and ask me about countdowns you create by saying "@callie countdown: <event name>".
+              </p>
+
+              <p><em>Keep in mind that you don't actually need to type the "<" and ">" symbols. That's just how I let you know that those are your own inputs!</em></p>
+
+              <p>Ask for "@callie help" if you need it, otherwise, I'll be hangin' around, just doing, you know, impawtent dog stuff.</p>
+            </p>
             </div>
           </div>
         </div>
