--- a/public/thanks.html
+++ b/public/thanks.html
@@ -24,12 +24,15 @@
               Hi there! I'm Callie the Calendar Corgi, a slack bot for keeping track of fun events, deadlines, and goals for you and your team. I'm also a very good dog!
               </p>
               <p>
-              Get started and create your first countdown by saying "@callie start date: <YYYY-MM-DD>, event: <event name>\", and ask me about countdowns you create by saying "@callie countdown: <event name>".
+              Get started and create your first countdown by saying "@callie start date: YYYY-MM-DD, event: eventname", and ask me about countdowns you create by saying "@callie countdown: eventname".
               </p>
 
               <p><em>Keep in mind that you don't actually need to type the "<" and ">" symbols. That's just how I let you know that those are your own inputs!</em></p>
 
-              <p>Ask for "@callie help" if you need it, otherwise, I'll be hangin' around, just doing, you know, impawtent dog stuff.</p>
+              <p>For example, you could say: @callie start date: 2034-04-05, event: trip to mars</p>
+              <p>Later, you could say: @callie countdown: trip to mars - then you'd get the countdown for your event.</p>
+
+              <p>Ask for "@callie help" to see other instructions, otherwise, I'll be hangin' around, just doing, you know, impawtent dog stuff.</p>
             </p>
             </div>
           </div>
