Add more hello stuff again

--- a/public/thanks.html
+++ b/public/thanks.html
@@ -24,10 +24,10 @@
               Hi there! I'm Callie the Calendar Corgi, a slack bot for keeping track of fun events, deadlines, and goals for you and your team. I'm also a very good dog!
               </p>
               <p>
-              Get started and create your first countdown by saying "@callie start date: YYYY-MM-DD, event: eventname", and ask me about countdowns you create by saying "@callie countdown: eventname".
+              Get started and create your first countdown by saying
+              <br>"@callie start date: YYYY-MM-DD, event: eventname", and ask me about countdowns you create by saying
+              <br>"@callie countdown: eventname".
               </p>
-
-              <p><em>Keep in mind that you don't actually need to type the "<" and ">" symbols. That's just how I let you know that those are your own inputs!</em></p>
 
               <p>For example, you could say: @callie start date: 2034-04-05, event: trip to mars</p>
               <p>Later, you could say: @callie countdown: trip to mars - then you'd get the countdown for your event.</p>
