--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
               <h3 class="push-down">
                 Callie the Calendar Corgi keeps track of events, deadlines, and more for your team with a few simple commands. Arf!
               </h3>
+            </div>
             <img id="screenshot" src="../img/callie-screenshot.png" alt="A screenshot of Callie in action"/>
             <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-            <div>
+            <div class="text-left">
                   <p>
                     <strong>UPDATES</strong>: Callie was last updated on April 10th, 2017.
                   </p>
@@ -34,7 +35,6 @@
                   This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
                   </p>
               </div>
-            </div>
           </div>
         </div>
       </div>
