Update index page

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
       <meta charset="UTF-8">
@@ -24,15 +24,13 @@
             <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
             <div class="text-left">
                   <p>
-                    <strong>UPDATES</strong>: Callie was last updated on April 10th, 2017.
+                    <strong>UPDATES</strong>: Callie was last updated on September 23rd, 2017.
                   </p>
                   <ul>
-                  <li>Some countdowns saved with bad data were unreachable via slack commands. Those are fixed and working now.</li>
-                  <li>Scheduled reminders will also now delete events if they happened already or happen on the day of the reminder.</li>
-                  <li>Error messages are more verbose. Especially if you try saving a countdown with brackets.</li>
+                    <li>Over the past couple months, Callie became much more popular than her original infrastructure was intended/able to handle. This was a tricky problem to solve! Over the past couple weeks, I rewrote most of Callie's setup to use <a href="https://github.com/zerobotlabs/relax" target="_blank">Relax</a>, which should help considerably. Over the next week or so, I'll be monitoring reliability/availability and making any further changes necessary, but long story short: Callie should be back in business.</li>
                   </ul>
                   <p>
-                  This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible.
+                    This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/1" target="_blank">small donation</a> to support free software. Callie and I appreciate it!
                   </p>
               </div>
           </div>
