--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
             <a class="push-down" id="add_to_slack" href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot,channels:history&client_id=54278405042.125508396647"><img id="add_to_slack" alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
             <div class="text-left">
                   <p>
-                    <strong>UPDATES</strong>: Callie was last updated on September 23rd, 2017.
+                    <strong>UPDATES</strong>: Callie was last updated on February 11th, 2018.
                   </p>
                   <ul>
-                    <li>Over the past couple months, Callie became much more popular than her original infrastructure was intended/able to handle. This was a tricky problem to solve! Over the past couple weeks, I rewrote most of Callie's setup to use <a href="https://github.com/zerobotlabs/relax" target="_blank">Relax</a>, which should help considerably. Over the next week or so, I'll be monitoring reliability/availability and making any further changes necessary, but long story short: Callie should be back in business.</li>
+                    <li>A few months before this update, I attempted to use <a href="https://github.com/zerobotlabs/relax" target="_blank">Relax</a> to address Callie's growing scalability issues. This turned out to be an over-engineered solution and ultimately didn't work out. I didn't have time to figure out anything else til recently. Turns out, switching to the Events API was the trick! Everything has been working smoothly since I released these recent changes.</li>
                   </ul>
                   <p>
                     This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/1" target="_blank">small donation</a> to support free software. Callie and I appreciate it!
