--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                     <li>A few months before this update, I attempted to use <a href="https://github.com/zerobotlabs/relax" target="_blank">Relax</a> to address Callie's growing scalability issues. This turned out to be an over-engineered solution and ultimately didn't work out. I didn't have time to figure out anything else til recently. Turns out, switching to the Events API was the trick! Everything has been working smoothly since I released these recent changes.</li>
                   </ul>
                   <p>
-                    This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/1" target="_blank">small donation</a> to support free software. Callie and I appreciate it!
+                    This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/1" target="_blank">small donation</a> to support free software... Callie and I appreciate it!
                   </p>
               </div>
           </div>
