add a thank you page

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,12 @@
                     <strong>UPDATES</strong>: Callie was last updated on February 11th, 2018.
                   </p>
                   <ul>
-                    <li>A few months before this update, I attempted to use <a href="https://github.com/zerobotlabs/relax" target="_blank">Relax</a> to address Callie's growing scalability issues. This turned out to be an over-engineered solution and ultimately didn't work out. I didn't have time to figure out anything else til recently. Turns out, switching to the Events API was the trick! Everything has been working smoothly since I released these recent changes.</li>
+                    <li>If you are interested in scalability issues re: slackbots, feel free to <a href="https://medium.com/@gerswayne/how-i-built-a-broken-slack-bot-and-how-i-made-it-scale-with-relax-1e27f81f8eba" target="_blank">read about the details here!</a></li>
                   </ul>
                   <p>
-                    This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/1" target="_blank">small donation</a> to support free software... Callie and I appreciate it!
+                    This is a one-man side project, so I appreciate the folks who have reached out via email to let me know when they've encountered any issues or bugs. Please continue to do so, and I'll work to keep Callie as consistent and reliable as possible. Maintaining a slack app for thousands of users is, unsurprisingly, a decent amount of work, so if you use Callie and enjoy the experience, please consider making a <a href="https://www.paypal.me/bpgerson/5" target="_blank">small donation</a> to support free software... Callie and I appreciate it!
                   </p>
+                  <p>On that note: <a href="/thanks.html">THANK YOU</a> to the companies and individuals who have donated to Callie. (If you don't want to be listed for donating, just include that in the paypal note)</p>
               </div>
           </div>
         </div>
@@ -95,9 +96,9 @@
               </a>
             </li>
             <li>
-              <a href="https://www.paypal.me/bpgerson/1" target="_blank">
+              <a href="https://www.paypal.me/bpgerson/5" target="_blank">
                 <h3>
-                  5. Donate a Dollar
+                  5. Donate a Few Barks...er...Bucks!
                 </h3>
                 <p>It'll keep the lights on for Callie. Thanks!</p>
               </a>
