--- a/public/thanks.html
+++ b/public/thanks.html
@@ -14,31 +14,20 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
-              <h1>You're all set!
-              <br>Pretty easy, right?</h1>
-              <h3 class="push-down">
-                Callie is ready and waiting on the channels you invite her to. Now go on and set up some countdowns. Bark!
-              </h3>
-              <h3>Getting Started:</h3>
-              <p>
-              Hi there! I'm Callie the Calendar Corgi, a slack bot for keeping track of fun events, deadlines, and goals for you and your team. I'm also a very good dog!
-              </p>
-              <p>
-              Get started and create your first countdown by saying
-              <br>"@callie start date: YYYY-MM-DD, event: eventname", and ask me about countdowns you create by saying
-              <br>"@callie countdown: eventname".
-              </p>
-
-              <p>For example, you could say: @callie start date: 2034-04-05, event: trip to mars</p>
-              <p>Later, you could say: @callie countdown: trip to mars - then you'd get the countdown for your event.</p>
-
-              <p>Ask for "@callie help" to see other instructions, otherwise, I'll be hangin' around, just doing, you know, impawtent dog stuff.</p>
-            </p>
+              <h1>Thank you!
+              <br>Callie's Gratitude List:</h1>
+              <ul>
+                <li><a href="https://www.hingehealth.com/" target="_blank">Hinge Health</a></li>
+                <li>Elizabeth A.</a></li>
+                <li>Richard S.</a></li>
+                <li><a href="https://www.paypal.me/bpgerson/5" target="_blank">And... you???</a></li>
+              </ul>
+              <p>Working on a free service for thousands of users is not easy or free for me! But it's worth it when I hear about folks really enjoying the bot. If you want to show your appreciate without donating, feel free to share Callie on Twitter/FB/etc etc. Thanks for visiting!</p>
             </div>
           </div>
         </div>
         <div class="row text-center">
-          <img src="../img/corgigirl.png" id="big_callie" class="text-center" alt="Callie, the calendar dog"/>
+          <img src="../img/corgigirl.png" id="big_callie" alt="Callie, the calendar dog"/>
         </div>
       </div>
     </div>
