--- a/public/oops.html
+++ b/public/oops.html
@@ -8,9 +8,9 @@
       <link rel="stylesheet" type="text/css" href="./css/main.css">
       <link rel="shortcut icon" href="./img/favicon.ico">
   </head>
-  <body>
-    <div class="jumbotron">
-      <div class="container hero wholepage white">
+  <body class="container hero wholepage white">
+    <div>
+      <div>
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-left">
