--- a/public/thanks.html
+++ b/public/thanks.html
@@ -8,27 +8,25 @@
       <link rel="stylesheet" type="text/css" href="./css/main.css">
       <link rel="shortcut icon" href="./img/favicon.ico">
   </head>
-  <body>
+  <body class="container hero wholepage white">
     <div class="jumbotron">
-      <div class="container hero wholepage white">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-center">
-            <div class="text-left">
-              <h1>Thank you!
-              <br>Callie's Gratitude List:</h1>
-              <ul>
-                <li><a href="https://www.hingehealth.com/" target="_blank">Hinge Health</a></li>
-                <li>Elizabeth A.</a></li>
-                <li>Richard S.</a></li>
-                <li><a href="https://www.paypal.me/bpgerson/5" target="_blank">And... you???</a></li>
-              </ul>
-              <p>Working on a free service for thousands of users is not easy or free for me! But it's worth it when I hear about folks really enjoying the bot. If you want to show your appreciate without donating, feel free to share Callie on Twitter/FB/etc etc. Thanks for visiting!</p>
-            </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <div class="text-left">
+            <h1>Thank you!</h1>
+            <h3>Callie's Gratitude List:</h3> 
+            <ul class="bigger-list">
+              <li><a href="https://www.hingehealth.com/" target="_blank">Hinge Health</a></li>
+              <li>Elizabeth A.</a></li>
+              <li>Richard S.</a></li>
+              <li><a href="https://www.paypal.me/bpgerson/5" target="_blank">And... you???</a></li>
+            </ul>
+            <p>Working on a free service for thousands of users is not easy or free for me! But it's worth it when I hear about folks really enjoying the bot. If you want to show your appreciate without donating, feel free to share Callie on Twitter/FB/etc etc. Thanks for visiting!</p>
           </div>
         </div>
-        <div class="row text-center">
-          <img src="../img/corgigirl.png" id="big_callie" alt="Callie, the calendar dog"/>
-        </div>
+      </div>
+      <div class="row text-center">
+        <img src="../img/corgigirl.png" id="big_callie" alt="Callie, the calendar dog"/>
       </div>
     </div>
   </body>
